--- a/WOLF.Net/WOLF.Net.csproj
+++ b/WOLF.Net/WOLF.Net.csproj
@@ -9,4 +9,13 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Commands\Forms\" />
+    <Folder Include="Entities\Achievements\" />
+    <Folder Include="Entities\Charms\" />
+    <Folder Include="Entities\Groups\Events\" />
+    <Folder Include="Entities\Tipping\" />
+    <Folder Include="Helpers\" />
+  </ItemGroup>
+
 </Project>
