--- a/WOLF.Net.Example/WOLF.Net.Example.csproj
+++ b/WOLF.Net.Example/WOLF.Net.Example.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WOLF.Net.Redis\WOLF.Net.Redis.csproj" />
+    <ProjectReference Include="..\WOLF.Net\WOLF.Net.csproj" />
+  </ItemGroup>
+
 </Project>
