--- a/WOLF.Net/WOLF.Net.csproj
+++ b/WOLF.Net/WOLF.Net.csproj
@@ -3,7 +3,15 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <OutputType>Library</OutputType>
-    <Version>4.0.0</Version>
+    <Version>4.0.0-alpha1</Version>
+    <Description>Unofficial C# library for connecting to WOLF (AKA Palringo)</Description>
+    <PackageTags>WOLF, Palringo, Pal, Wolfringo</PackageTags>
+    <RepositoryUrl>https://github.com/dawalters1/Wolf.Net</RepositoryUrl>
+    <PackageIcon>icon.png</PackageIcon>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <ApplicationIcon>icon_vgE_icon.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,6 +23,13 @@
   <ItemGroup>
     <Folder Include="Entities\Groups\Events\" />
     <Folder Include="Entities\Tipping\Leaderboards\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="C:\Users\Dave\Downloads\icon.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
