--- a/WOLF.Net/WOLF.Net.csproj
+++ b/WOLF.Net/WOLF.Net.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <OutputType>Library</OutputType>
-    <Version>4.0.0-alpha6</Version>
+    <Version>4.0.0-alpha7</Version>
     <Description>Unofficial C# library for connecting to WOLF (AKA Palringo)</Description>
     <PackageTags>WOLF, Palringo, Pal, Wolfringo</PackageTags>
     <RepositoryUrl>https://github.com/dawalters1/Wolf.Net</RepositoryUrl>
@@ -12,9 +12,7 @@
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <ApplicationIcon>icon_vgE_icon.ico</ApplicationIcon>
-    <PackageReleaseNotes>- Clear cache on reconnect
-- Added group stage update to group -&gt; group.UpdateStage(bot).xyz(...).Save();
-- Added ability to request stage list</PackageReleaseNotes>
+    <PackageReleaseNotes>- Added a param check to commands to ensure no errors are thrown</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
