--- a/WOLF.Net.Redis/WOLF.Net.Redis.csproj
+++ b/WOLF.Net.Redis/WOLF.Net.Redis.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="C:\Users\Dave\Downloads\icon.png">
+    <None Include="..\icon.png">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
