--- a/WOLF.Net.Redis/WOLF.Net.Redis.csproj
+++ b/WOLF.Net.Redis/WOLF.Net.Redis.csproj
@@ -10,6 +10,7 @@
     <FileVersion>3.0.0.0</FileVersion>
     <Version>3.2.0</Version>
     <ApplicationIcon>icon_vgE_icon.ico</ApplicationIcon>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
