--- a/WOLF.Net/WOLF.Net.csproj
+++ b/WOLF.Net/WOLF.Net.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1;net5.0;</TargetFrameworks>
+    <TargetFrameworks>netstandard2.1;netcoreapp3.1;net5.0;</TargetFrameworks>
     <OutputType>Library</OutputType>
-    <Version>4.2.0.1</Version>
+    <Version>4.2.1</Version>
     <Description>Unofficial C# library for connecting to WOLF (AKA Palringo)</Description>
     <PackageTags>WOLF, Palringo, Pal, Wolfringo, PalBot, WolfBot</PackageTags>
     <RepositoryUrl>https://github.com/dawalters1/Wolf.Net</RepositoryUrl>
@@ -12,8 +12,7 @@
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <ApplicationIcon></ApplicationIcon>
-    <PackageReleaseNotes>• Reintroduction of Forms (Improved)
-• Added boolean trimAds to ToDisplayName(trimAds: true)</PackageReleaseNotes>
+    <PackageReleaseNotes>.NetStandard 2.1</PackageReleaseNotes>
     <Authors>David Walters</Authors>
   </PropertyGroup>
 
