--- a/WOLF.Net.Redis/WOLF.Net.Redis.csproj
+++ b/WOLF.Net.Redis/WOLF.Net.Redis.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-     <TargetFrameworks>netcoreapp3.1;net5.0;</TargetFrameworks>
+     <TargetFrameworks>netstandard2.1;netcoreapp3.1;net5.0;</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageIcon>icon.png</PackageIcon>
     <RepositoryUrl>https://github.com/dawalters1/Wolf.Net</RepositoryUrl>
     <AssemblyVersion>3.0.0.0</AssemblyVersion>
     <FileVersion>3.0.0.0</FileVersion>
-    <Version>3.2.0</Version>
+    <Version>3.2.1</Version>
     <ApplicationIcon>icon_vgE_icon.ico</ApplicationIcon>
     <LangVersion>default</LangVersion>
   </PropertyGroup>
