--- a/WOLF.Net/WOLF.Net.csproj
+++ b/WOLF.Net/WOLF.Net.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>netcoreapp3.1;net5.0;</TargetFrameworks>
     <OutputType>Library</OutputType>
-    <Version>5.0.0-beta7</Version>
+    <Version>5.0.0-beta8</Version>
     <Description>Unofficial C# library for connecting to WOLF (AKA Palringo)</Description>
     <PackageTags>WOLF, Palringo, Pal, Wolfringo, PalBot, WolfBot</PackageTags>
     <RepositoryUrl>https://github.com/dawalters1/Wolf.Net</RepositoryUrl>
@@ -13,6 +13,18 @@
     <ApplicationIcon></ApplicationIcon>
     <Authors>David Walters</Authors>
     <PackageIcon>icon.png</PackageIcon>
+    <PackageReleaseNotes>V5.0 Change Log
+
+What's New:
+- Introduced chained helpers, things are now easier to locate.
+- Added WOLF 10.9 Message formatting as well as embeds
+- Added Social Sign-in support
+- Added SubscriberCharmSummary to charm helper
+- Readded Message Setting fetch and update
+
+Bug Fixes:
+- Fixed command case sensitivity
+- Fixed missing event 'private message accept response'</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
