--- a/WOLF.Net/WOLF.Net.csproj
+++ b/WOLF.Net/WOLF.Net.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>netcoreapp3.1;net5.0;</TargetFrameworks>
     <OutputType>Library</OutputType>
-    <Version>5.0.0</Version>
+    <Version>5.0.1</Version>
     <Description>Unofficial C# library for connecting to WOLF (AKA Palringo)</Description>
     <PackageTags>WOLF, Palringo, Pal, Wolfringo, PalBot, WolfBot</PackageTags>
     <RepositoryUrl>https://github.com/dawalters1/Wolf.Net</RepositoryUrl>
@@ -13,18 +13,8 @@
     <ApplicationIcon></ApplicationIcon>
     <Authors>David Walters</Authors>
     <PackageIcon>icon.png</PackageIcon>
-    <PackageReleaseNotes>V5.0 Change Log
-
-What's New:
-- Introduced chained helpers, things are now easier to locate.
-- Added WOLF 10.9 Message formatting as well as embeds
-- Added Social Sign-in support
-- Added SubscriberCharmSummary to charm helper
-- Readded Message Setting fetch and update
-
-Bug Fixes:
-- Fixed command case sensitivity
-- Fixed missing event 'private message accept response'</PackageReleaseNotes>
+    <PackageReleaseNotes>Update to latest SocketIO version
+Fixed loginTypes</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
@@ -43,7 +33,7 @@ Bug Fixes:
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="SocketIoClient" Version="2.1.7" />
+    <PackageReference Include="SocketIOClient.Newtonsoft.Json" Version="2.2.1" />
     <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
   </ItemGroup>
 
