--- a/WOLF.Net/WOLF.Net.csproj
+++ b/WOLF.Net/WOLF.Net.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.1;netcoreapp3.1;net5.0;</TargetFrameworks>
     <OutputType>Library</OutputType>
-    <Version>4.3.4</Version>
+    <Version>4.3.5</Version>
     <Description>Unofficial C# library for connecting to WOLF (AKA Palringo)</Description>
     <PackageTags>WOLF, Palringo, Pal, Wolfringo, PalBot, WolfBot</PackageTags>
     <RepositoryUrl>https://github.com/dawalters1/Wolf.Net</RepositoryUrl>
@@ -15,6 +15,12 @@
     <PackageReleaseNotes>Fixed UpdateGroupSubscriberAsync(...)</PackageReleaseNotes>
     <Authors>David Walters</Authors>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Entities\Achievements\Group\**" />
+    <EmbeddedResource Remove="Entities\Achievements\Group\**" />
+    <None Remove="Entities\Achievements\Group\**" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
@@ -29,9 +35,5 @@
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Entities\Achievements\Group\" />
   </ItemGroup>
 </Project>
