--- a/WOLF.Net/WOLF.Net.csproj
+++ b/WOLF.Net/WOLF.Net.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>netcoreapp3.1;net5.0;</TargetFrameworks>
     <OutputType>Library</OutputType>
-    <Version>5.0.6.1</Version>
+    <Version>5.0.7</Version>
     <Description>Unofficial C# library for connecting to WOLF (AKA Palringo)</Description>
     <PackageTags>WOLF, Palringo, Pal, Wolfringo, PalBot, WolfBot</PackageTags>
     <RepositoryUrl>https://github.com/dawalters1/Wolf.Net</RepositoryUrl>
@@ -13,7 +13,7 @@
     <ApplicationIcon></ApplicationIcon>
     <Authors>David Walters</Authors>
     <PackageIcon>icon.png</PackageIcon>
-    <PackageReleaseNotes>Fixed UpdateGroupSubscriberAsync(...) Method</PackageReleaseNotes>
+    <PackageReleaseNotes>- Fixed issue causing subscriber members list to be requested when its not needed</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
